SSO-193 add  swagger docs  for get current sessions
